--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,8 +3,10 @@ name: Release
 on:
   # Triggers the workflow on push events but only for default and protected branches
   push:
-    branches: [ "main", "hotfix/*"]
-
+    branches:
+    - main
+    - hotfix/*
+    
 # The different jobs of this workflow need the following permissions
 permissions:
   contents: write
