feat: enabled hotfix release-please path

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,6 +46,7 @@ jobs:
     outputs:
       releases_created: ${{ steps.release.outputs.releases_created }}
       tag_name: ${{ steps.release.outputs.tag_name }}
+    if: "!startsWith(github.ref, 'refs/heads/hotfix/')"
     steps:
       - id: release
         name: Run prerelease release-please
@@ -54,6 +55,25 @@ jobs:
           config-file: ".github/prerelease-config.json"
           manifest-file: ".github/prerelease-manifest.json"
           token: ${{ secrets.GH_PAT }}
+          target-branch: ${{ github.ref_name }}
+
+  hotfixrelease-prep:
+    name: Create Hotfix Release Pull Request
+    runs-on: ubuntu-latest
+    needs: [ label-check ]
+    outputs:
+      releases_created: ${{ steps.release.outputs.releases_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
+    if: "startsWith(github.ref, 'refs/heads/hotfix/')"
+    steps:
+      - id: hotfixrelease
+        name: Run hotfix release-please
+        uses: googleapis/release-please-action@v4.3.0
+        with:
+          config-file: ".github/release-config.json"
+          manifest-file: ".github/release-manifest.json"
+          token: ${{ secrets.GH_PAT }}
+          target-branch: ${{ github.ref_name }}
 
   # This job runs tests before the creation of the prerelease
   prerelease-test:
@@ -99,7 +119,19 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     if: ${{ needs.prerelease-prep.outputs.releases_created == 'true' && !contains(needs.prerelease-prep.outputs.tag_name, 'rc') }}
-    needs: [ prerelease-prep ]
+    needs: 
+     - prerelease-prep
+    steps:
+      - name: Release Step
+        run: |
+          echo "Running release step!"
+
+  releaseHotfix:
+    name: Create Hotfix Release
+    runs-on: ubuntu-latest
+    if: ${{ needs.hotfixrelease-prep.outputs.releases_created == 'true' && !contains(needs.hotfixrelease-prep.outputs.tag_name, 'rc') }}
+    needs: 
+     - hotfixrelease-prep
     steps:
       - name: Release Step
         run: |
@@ -110,6 +142,15 @@ jobs:
     name: Post Release Steps
     runs-on: ubuntu-latest
     needs: [ release ]
+    steps:
+      - name: Post Release Step
+        run: |
+          echo "Running post-release steps!"
+
+  post-release-hotfix:
+    name: Post Release Steps
+    runs-on: ubuntu-latest
+    needs: [ releaseHotfix ]
     steps:
       - name: Post Release Step
         run: |
