--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -126,17 +126,6 @@ jobs:
         run: |
           echo "Running release step!"
 
-  releaseHotfix:
-    name: Create Hotfix Release
-    runs-on: ubuntu-latest
-    if: ${{ needs.hotfixrelease-prep.outputs.releases_created == 'true' && !contains(needs.hotfixrelease-prep.outputs.tag_name, 'rc') }}
-    needs: 
-     - hotfixrelease-prep
-    steps:
-      - name: Release Step
-        run: |
-          echo "Running release step!"
-
   # This job runs post-release steps
   post-release:
     name: Post Release Steps
@@ -147,11 +136,22 @@ jobs:
         run: |
           echo "Running post-release steps!"
 
-  post-release-hotfix:
-    name: Post Release Steps
+  release-hotfix:
+    name: Create Hotfix Release
     runs-on: ubuntu-latest
-    needs: [ releaseHotfix ]
+    if: ${{ needs.hotfixrelease-prep.outputs.releases_created == 'true' && !contains(needs.hotfixrelease-prep.outputs.tag_name, 'rc') }}
+    needs: 
+     - hotfixrelease-prep
+    steps:
+      - name: Release Step
+        run: |
+          echo "Running hotfix release step!"
+
+  post-release-hotfix:
+    name: Post Hotfix Release Steps
+    runs-on: ubuntu-latest
+    needs: [ release-hotfix ]
     steps:
       - name: Post Release Step
         run: |
-          echo "Running post-release steps!"
+          echo "Running post-release-hotfix steps!"
