--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,7 @@ on:
     branches:
     - main
     - release-hotfix
+    - hotfix/*
 
 # The different jobs of this workflow need the following permissions
 permissions:
@@ -64,7 +65,8 @@ jobs:
     outputs:
       releases_created: ${{ steps.release.outputs.releases_created }}
       tag_name: ${{ steps.release.outputs.tag_name }}
-    if: ${{ github.ref == 'refs/heads/release-hotfix' }}
+    # if: ${{ github.ref == 'refs/heads/release-hotfix' }}
+    if: ${{ startsWith(github.ref, 'refs/heads/hotfix/') || (github.ref == 'refs/heads/release-hotfix') }}
     steps:
       - id: hotfixrelease
         name: Run hotfix release-please
