--- a/.github/prerelease-config.json
+++ b/.github/prerelease-config.json
@@ -7,7 +7,7 @@
     { "type": "feat", "hidden": false, "section": "Features" },
     { "type": "fix", "hidden": false, "section": "Bug Fixes" },
     { "type": "refactor", "hidden": false, "section": "Code Refactoring" },
-    { "type": "chore", "hidden": false, "section": "Miscellaneous Chores" },
+    { "type": "chore", "hidden": true, "section": "Miscellaneous Chores" },
     { "type": "build", "hidden": false, "section": "Build System and Dependencies" },
     { "type": "docs", "hidden": false, "section": "Docs" }
   ],
