--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -65,7 +65,6 @@ jobs:
     outputs:
       releases_created: ${{ steps.hotfixrelease.outputs.releases_created }}
       tag_name: ${{ steps.hotfixrelease.outputs.tag_name }}
-    # if: ${{ github.ref == 'refs/heads/release-hotfix' }}
     if: ${{ startsWith(github.ref, 'refs/heads/hotfix/') || (github.ref == 'refs/heads/release-hotfix') }}
     steps:
       - id: hotfixrelease
@@ -144,9 +143,9 @@ jobs:
     needs:
       - hotfixrelease-prep
     steps:
-      - name: Release Step
+      - name: Check Hotfix Release Prep Job Outputs
         run: |
-          echo "Running hotfix release checks..."
+          echo "Check outputs of hotfix release prep job"
           echo "Release Created: ${{ needs.hotfixrelease-prep.outputs.releases_created }}"
           echo "Tag Name: ${{ needs.hotfixrelease-prep.outputs.tag_name }}"
 
