--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -1,6 +1,7 @@
 {
   "release-type": "simple",
   "prerelease": false,
+  "include-v-in-tag": "true",
   "changelog-sections": [
     { "type": "feat", "hidden": false, "section": "Features" },
     { "type": "fix", "hidden": false, "section": "Bug Fixes" },
